@@ -2,6 +2,7 @@
 
 pip == 9.0.1
 setuptools == 36.6.0
+twine == 1.9.1
 
 tox == 2.9.1
 -r tests/requirements.txt
