@@ -62,7 +62,7 @@ package = dict(
     top='pyliblinear',
     pathname='pyliblinear',
     provides=_doc('PROVIDES'),
-    desc=_doc('SUMMARY'),
+    desc=_doc('SUMMARY').strip(),
     longdesc=_doc('DESCRIPTION'),
     author=__author__,
     email='nd@perlig.de',
